comment and minor changes